<?xml version="1.0" encoding="utf-8"?>
<resources>

    <integer name="com_vk_sdk_AppId">5063011</integer>
    <string name="com_facebook_sdk_AppId">1659764587638157</string>
    <string name="gcm_defaultSenderId">1066490905703</string>

    <string name="app_name">ENTalapp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Обновить</string>

    <string name="kazakh">Қазақша</string>
    <string name="russian">Русский</string>

    <!-- Error messages -->
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>

    // ***************** In Russia: ******************

    // Dialogs:
    <string name="no_games">Нет игр. Нажмите кнопку играть =)</string>
    <string name="invite">Хочешь бросить вызов?</string>
    <string name="want_to_play">Ваше приглашение отправлено!</string>
    <string name="wants_to_play">хочет сыграть с тобой!</string>

    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="accept">Играть</string>
    <string name="cancel">Отмена</string>

    <string name="waiting">Эх, мой медленный интернет =(</string>
    <string name="oops">У вас нет интернет соединения</string>
    <string name="connection_error">Плохое интернет соединение =(</string>

    <string name="action_search">Search</string>


    // Navigation Draw:
    <string name="drawer_item_user">Профиль</string>
    <string name="drawer_item_rating">Рейтинг</string>
    <string name="drawer_item_games">Пройденные Игры</string>
    <string name="drawer_item_friends">Друзья</string>
    <string name="drawer_item_challenges">Вызовы</string>
    <string name="drawer_item_settings">Настройки</string>
    <string name="drawer_item_help">Помощь</string>
    <string name="drawer_item_about">О Нас</string>
    <string name="drawer_item_logout">Выйти</string>


    // My Profile:
    <string name="title_activity_profile">Мой Профиль</string>
    <string name="wait_profile">Загружаем профиль</string>
    <string name="my_games">Мои Игры</string>
    <string name="rank">Общий рейтинг:</string>
    <string name="games">Сыграно игр:</string>
    <string name="position">Позиция в рейтинге:</string>


    // Choose Opponent:
    <string name="title_activity_choose_opponent">Выберите Соперника</string>
    <string name="random_opponent">Случайный Соперник</string>
    <string name="choose_from_friends">Выбрать из друзей</string>


    // Choose Subject:
    <string name="title_activity_categories">Выберите предмет</string>
    <string name="wait_subjects">Загружаем предметы</string>


    // Result:
    <string name="title_activity_result">Результат</string>
    <string name="revenge">Реванш</string>
    <string name="update">Обновить</string>
    <string name="new_game">Новая Игра</string>
    <string name="get_result">Загружаем результат</string>
    <string name="wait">Твой соперник не торопится :)</string>
    <string name="done">Друг тормозит, сыграй в новую игру</string>
    <string name="win">Победа</string>
    <string name="lose">Поражение</string>
    <string name="draw">Ничья</string>
    <string name="share">Поделиться</string>


    // Played games:
    <string name="title_activity_results_list">Пройденные Игры</string>
    <string name="wait_games">Загрузка великолепных достижений =)</string>
    <string name="connection_to_games">Загрузка сыгранных игр</string>
    <string name="empty_games">Нет игр</string>


    // Throbber Activity:
    <string name="title_activity_throbber">ThrobberActivity</string>
    <string name="refuse">Отказаться</string>
    <string name="connection_to_server">Идет подсоединение к сереверу, пожалуйста подождите.
        При мобильном интернете это может занять больше времени.</string>
    <string name="search_opponent">Вы соединились с сервером! Идет поиск соперника</string>
    <string name="stop_execution">Остановить поиск</string>


    // Game:
    <string name="title_activity_game">GameActivity</string>
    <string name="wait_result">Момент истины. пс: надеюсь у тебя шустрый интернет =)</string>
    <string name="wait_logout">Так печально расставаться =(</string>
    <string name="wait_notification">Отправляем приглашение</string>
    <string name="finish">Сдаться?</string>
    <string name="finish_message">Если покинешь игру, то получишь 0 баллов =(</string>
    <string name="tip">Нажмите на экран</string>


    // Friends:
    <string name="title_activity_friends">Мои Друзья</string>
    <string name="wait_friends">Загружаем друзей</string>
    <string name="no_friends">Нет друзей</string>


    // Rating:
    <string name="title_activity_ranking">Рейтинг</string>
    <string name="connection_to_ratings">Загружаем рейтинг</string>


    // Ready to play:
    <string name="title_activity_ready_to_play">Ready To Play</string>


    // About Us:
    <string name="title_activity_info">О Нас</string>
    <string name="title1">Удобно</string>
    <string name="title2">Весело</string>
    <string name="title3">Эффективно</string>
    <string name="title4">Отправь отзыв</string>
    <string name="text1">Готовьтесь к экзаменам в любом месте в любое время</string>
    <string name="text2">Соревнуйтесь с друзьями и другими игроками</string>
    <string name="text3">Оцените свои знания с высокой точностью, благодаря системе умного рейтинга</string>
    <string name="text4">Любой отзыв важен для нас. Ниже можете отправить Ваши комментарии и пожелания:</string>
    <string name="send">Отправить</string>
    <string name="hint">Введите текст</string>
    <string name="empty_text">Пустой текст</string>
    <string name="thanks">Спасибо за Ваш отзыв!</string>
    <string name="error">Ошибка</string>


    // Ready to play:
    <string name="title_activity_challenges">Вызовы</string>
    <string name="no_challenges">Нет вызовов</string>
    <string name="accept_challenge">Принять вызов от</string>

</resources>
