<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.ent.saken2316.entalapp.Activity.InfoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/primary"
        android:transitionName="actionBar" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/textViewTitle1"
            android:text="@string/title1"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/primary_text"/>
        <TextView
            android:id="@+id/textViewText1"
            android:text="@string/text1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"/>

        <TextView
            android:id="@+id/textViewTitle2"
            android:text="@string/title2"
            android:layout_marginTop="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/primary_text"/>
        <TextView
            android:id="@+id/textViewText2"
            android:text="@string/text2"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"/>

        <TextView
            android:id="@+id/textViewTitle3"
            android:text="@string/title3"
            android:layout_marginTop="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/primary_text"/>
        <TextView
            android:id="@+id/textViewText3"
            android:text="@string/text3"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"/>

        <TextView
            android:id="@+id/textViewTitle4"
            android:text="@string/title4"
            android:layout_marginTop="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/primary_text"/>
        <TextView
            android:id="@+id/textViewText4"
            android:text="@string/text4"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:hint="Введите текст"
            android:imeOptions="actionSend"
            android:textColor="@color/primary_text"/>
        <Button
            android:onClick="onClickSend"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button"
            android:text="@string/send"/>

    </LinearLayout>

</RelativeLayout>
