<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.student.entalapp.ProfileActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <TextView
                android:id="@+id/textViewNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="60dp"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:text="@string/title_activity_choose_opponent"
                android:textColor="@color/white"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:text="@string/random_opponent"
                android:onClick="onClickChooseRandom"
                android:layout_gravity="center"
                android:background="@drawable/button"
                android:textColor="@color/white"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:text="@string/choose_from_friends"
                android:onClick="onClickChooseFriend"
                android:layout_gravity="center"
                android:background="@drawable/button"
                android:textColor="@color/white" />

            <!--<Button-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="60dp"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:text="Поиск"-->
            <!--android:onClick="onClickFindFriend"-->
            <!--android:layout_gravity="center"-->
            <!--android:background="@drawable/button"-->
            <!--android:textColor="@color/white" />-->

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
