<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.ent.saken2316.entalapp.Activity.CategoriesActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/primary"
        android:transitionName="actionBar" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <ProgressBar
            style="?android:progressBarStyleSmall"
            android:visibility="invisible"
            android:indeterminate="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/progressBar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:id="@+id/textView"
            android:text="@string/wait_subjects"
            android:textColor="@color/secondary_text"/>
        <Button
            android:id="@+id/updateButton"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="145dp"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:textSize="12sp"
            android:text="@string/update"
            android:background="@drawable/button"
            android:textColor="@color/white"/>
        <TabHost xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@android:id/tabhost"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary">

                    <TextView
                        android:tag="tab0"
                        android:text="@string/kazakh"
                        android:background="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        />
                    <TextView
                        android:tag="tab1"
                        android:text="@string/russian"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        />

                </TabWidget>

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/white">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:id="@+id/tab1"
                        android:orientation="vertical">

                        <ListView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:divider="@drawable/divider"
                            android:id="@+id/listView1" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:id="@+id/tab2"
                        android:orientation="vertical">

                        <ListView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:id="@+id/listView2" />

                    </LinearLayout>

                </FrameLayout>
            </LinearLayout>
        </TabHost>

    </FrameLayout>

</RelativeLayout>
