<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_primary"
    tools:context="com.example.student.entalapp.ProfileActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/card_shape"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@id/linear_layout"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="160dp"
                android:background="@drawable/card_head_shape">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/buttonBack"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="6dp"
                        android:layout_marginTop="6dp"
                        android:background="@drawable/abc_ic_clear_mtrl_alpha"/>

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:background="@color/white"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/linearLayoutRating"
                    android:orientation="vertical"
                    android:layout_width="120dp"
                    android:layout_height="110dp"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/textViewRating"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="20"
                        android:gravity="center"
                        android:textColor="@color/game_red"
                        android:paddingRight="6dp"
                        android:drawableRight="@drawable/ic_arrow_downward_black_18dp"
                        android:textSize="48sp"
                        />
                    <TextView
                        android:id="@+id/textRank"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="рейтинг"
                        android:gravity="center"
                        android:textColor="@color/primary_text"
                        android:textSize="24sp"/>

                </LinearLayout>

                <ProgressBar
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:id="@+id/progressBar" />

                <TextView
                    android:id="@id/textViewStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/get_result"
                    android:textColor="@color/primary_text"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp">

            <RelativeLayout
                android:id="@+id/buttonShare"
                android:layout_width="fill_parent"
                android:layout_height="36dp"
                android:layout_marginBottom="8dp"
                android:onClick="onClickShare"
                android:background="@drawable/button_share"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/ic_share_black_18dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textSize="18sp"
                    android:textColor="@color/primary_text"
                    android:text="@string/share" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="36dp"
                android:onClick="onClickAnotherGame"
                android:background="@drawable/button"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/ic_control_point_white_18dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textSize="18sp"
                    android:text="@string/new_game" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="onClickRevenge"
                android:background="@drawable/button"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/ic_cached_white_18dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textSize="18sp"
                    android:text="@string/revenge" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_activity_result"
            android:textColor="@color/white"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/textViewSubject"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="История Казахстана"
            android:textSize="20sp"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="-"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="36sp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/avatar1"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/user"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="18sp"
                    android:id="@+id/textViewName1"
                    android:textColor="@color/primary_text"
                    android:text="Saken"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="30sp"
                    android:text="50"
                    android:id="@+id/textViewPoint1"
                    android:textColor="@color/primary_text" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="12dp"
                android:textSize="36sp"
                android:textColor="@color/white"
                android:text="VS"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/avatar2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/user"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="18sp"
                    android:id="@+id/textViewName2"
                    android:textColor="@color/primary_text"
                    android:text="Abuka"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="30sp"
                    android:text="13"
                    android:id="@+id/textViewPoint2"
                    android:textColor="@color/primary_text" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
